--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 
+	<div id = "rotate">
+		Please rotate your phone
+	</div>
+
 	<div id="wrapper">
 		<div class="wrapper-holder">
 			<header id="header">
