--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,7 @@
 	<div style = "display: none;">
 		
 		<div id = "portfolio_1" class = "popup_portfolio">
-			<img src="images/physualize.jpg">
+			<img src="images/physualize.JPG">
 			
 			<h3>Physualize</h3>
 			<time datetime = "2023-05-30">Made: 30/05/23</time>
@@ -162,7 +162,7 @@
 		</div>
 		
 		<div id = "portfolio_3" class = "popup_portfolio">
-			<img src="images/boardGames.jpg">
+			<img src="images/boardGames.JPG">
 
 			<h3>Board Games</h3>
 			<time datetime = "2020-11-15">Made: 15/11/20</time>
@@ -176,9 +176,9 @@
 		</div>
 
 		<div id = "portfolio_4" class = "popup_portfolio">
-			<img src="images/railway.jpg">
+			<img src="images/railway.JPG">
 
-			<h3>Board Games</h3>
+			<h3>Railway Management System</h3>
 			<time datetime = "2023-03-07">Made: 07/03/23</time>
 			
 			<p>This project is written in C. It was a group project, made by Areen, Aryan, Yash, Niranjan, Aditya, and me. The program
