--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,8 @@
 					<li data-filter = ".web">Web Dev</li>
 					<li data-filter = ".java">Java</li>
 					<li data-filter = ".c">C</li>
-
+					<li data-filter = "matlab">MATLAB</li>
+					
 				</ul>
 
 				<ul id = "container" class = "item-list">
@@ -115,6 +116,23 @@
 						</div>
 					</li>
 
+					<li class = "item matlab key">
+						<div class = "image">
+
+							<img src = "images/RailwaySystem.png">
+
+							<div class = "hover">
+								<a class = "fancybox" rel = "gallery1" href = "#portfolio_5">
+									<div class = "item-content">
+										<h4>PSO Simulation</h4>
+
+										<p>Simulates the movement of drones using PSO.</p>
+									</div>
+								</a>
+							</div>
+
+						</div>
+					</li>
 				</ul>
 			</section>
 		</div>
