--- a/myskills.html
+++ b/myskills.html
@@ -36,6 +36,7 @@
 				
 						<ul class = "progress">
 							<li><span class = "c">C</span></li>
+							<li><span class = "matlab">MATLAB</span></li>
 							<li><span class = "python">Python</span></li>
 							<li><span class = "java">Java</span></li>
 							<li><span class = "cpp">C++</span></li>
