--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
 					<li class = "item matlab key">
 						<div class = "image">
 
-							<img src = "images/RailwaySystem.png">
+							<img src = "images/drone.png">
 
 							<div class = "hover">
 								<a class = "fancybox" rel = "gallery1" href = "#portfolio_5">
@@ -152,10 +152,10 @@
 	<div style = "display: none;">
 		
 		<div id = "portfolio_1" class = "popup_portfolio">
-			<img src="images/physualize.JPG">
+			<img src = "images/physualize.JPG">
 			
 			<h3>Physualize</h3>
-			<time datetime = "2023-05-30">Made: 30/05/23</time>
+			<time>Currently being developed</time>
 			
 			<p>It is my first web development project. It uses HTML, CSS, JavaScript, PHP, and MySQL. It contains animations related to 
 				topics like projectile motion. <br>
@@ -168,7 +168,7 @@
 		</div>
 	
 		<div id = "portfolio_2" class = "popup_portfolio">
-			<img src="images/balanceEquation.png">
+			<img src = "images/balanceEquation.png">
 		
 			<h3>Chemical Equation Balancer</h3>
 			<time datetime = "2022-10-20">Made: 20/10/22</time>
@@ -180,7 +180,7 @@
 		</div>
 		
 		<div id = "portfolio_3" class = "popup_portfolio">
-			<img src="images/boardGames.JPG">
+			<img src = "images/boardGames.JPG">
 
 			<h3>Board Games</h3>
 			<time datetime = "2020-11-15">Made: 15/11/20</time>
@@ -194,7 +194,7 @@
 		</div>
 
 		<div id = "portfolio_4" class = "popup_portfolio">
-			<img src="images/railway.JPG">
+			<img src = "images/railway.JPG">
 
 			<h3>Railway Management System</h3>
 			<time datetime = "2023-03-07">Made: 07/03/23</time>
@@ -207,6 +207,15 @@
 
 		</div>
 
+		<div id = "portfolio_5" class = "popup_portfolio">
+			<img src = "images/pso_main.JPG">
+
+			<h3>PSO Drone Simulation</h3>
+			<time>Currently being developed</time>
+			
+			<p>This is a group project. Currently, the MATLAB code is being translated to C in order to control the
+			   drone.</p>
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
