--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 					<li data-filter = ".web">Web Dev</li>
 					<li data-filter = ".java">Java</li>
 					<li data-filter = ".c">C</li>
-					<li data-filter = "matlab">MATLAB</li>
+					<li data-filter = ".matlab">MATLAB</li>
 					
 				</ul>
 
