--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
 			<time>Currently being developed</time>
 			
 			<p>This is a group project. Currently, the MATLAB code is being translated to C in order to control the
-			   drone.</p>
+			   drone. The drones are controlled using Particle Swarm Optimization algorithm.</p>
 		</div>
 	</div>
 
